--- a/main.yml
+++ b/main.yml
@@ -16,3 +16,7 @@ jobs:
           node-version: '18'
       - run: npm install
       - run: npm test
+
+      env:
+  TOKEN: ${{ secrets.MEU TOKEN }}
+
